fixes for dashicons on toolbar in admin backend on tablet/mobile preview

--- a/src/block-globals.editor.scss
+++ b/src/block-globals.editor.scss
@@ -12,10 +12,17 @@ body .editor-styles-wrapper {
 	padding: 12px;
 }
 
+.components-toolbar>div>.components-toolbar__control.components-button.has-icon.is-pressed .dashicons-heading:before,
 .is-tablet-preview .dashicons-heading:before,
 .is-mobile-preview .dashicons-heading:before {
-	content: 'H' !important;
 	color: #fff;
+}
+
+.components-toolbar>div>.components-toolbar__control.components-button.has-icon .dashicons-heading:before {
+	color: #1e1e1e;
+	font-family: dashicons,
+		sans-serif;
+	content: "\f10e" !important;
 }
 
 /*for adjusting for post/page container grids for some themes*/
